# GeometryWars

./: .gitignore  Art.cpp  Art.hpp  BlackHole.cpp  BlackHole.hpp  Bullet.cpp  Bullet.hpp  CMakeLists.txt  ColorUtil.cpp  ColorUtil.hpp  Enemy.cpp  Enemy.hpp  EnemySpawner.cpp  EnemySpawner.hpp  Entity.cpp  Entity.hpp  EntityManager.cpp  EntityManager.hpp  Extensions.cpp  Extensions.hpp  GameRoot.cpp  GameRoot.hpp  Grid.cpp  Grid.hpp  IncludeGL.hpp  Input.cpp  Input.hpp  LICENSE  Makefile  Makefile.emscripten  MathUtil.cpp  MathUtil.hpp  Particle.hpp  ParticleManager.cpp  ParticleManager.hpp  ParticleState.cpp  ParticleState.hpp  PlayerShip.cpp  PlayerShip.hpp  PlayerStatus.cpp  (+14 more)
Resources/Shaders/: spritebatch.frag  spritebatch.vert
Utility/: package.hpp  stb_image.h  tAutosizeViewport.cpp  tAutosizeViewport.hpp  tInputEvent.hpp  tMath.cpp  tMatrix.cpp  tProgram.cpp  tShader.cpp  tShader.hpp  tSound.cpp  tSound.hpp  tSpriteBatch.cpp  tSpriteBatch.hpp  tSpriteFont.cpp  tSurface.cpp  tTexture.cpp  tTimer.cpp  tTimer.hpp  tVector.cpp  tVector.hpp  tViewport.cpp
